Fix "Fix Deform" access evaluated data form original objects

This is part of T60517.